@@ -59,4 +59,5 @@
 	- improve popup window
 	- update the german translation
 	- reorganize project
+	- add basic Windows support
 
